--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "dompurify": "^3.2.4",
+    "express": "^4.21.2",
+    "joi": "^17.13.3",
+    "jsdom": "^26.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
