Changed env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-MONGODB_USERNAME=your_username
-MONGODB_PASSWORD=your_password
-MONGODB_URI=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@yourcluster.mongodb.net/yourdatabase
+MONGODB_USERNAME=your_actual_username
+MONGODB_PASSWORD=your_actual_password
+MONGODB_CLUSTER=your_cluster.mongodb.net
+MONGODB_OPTIONS=retryWrites=true&w=majority&appName=Cluster0
